fixed all the horizontal scrollbar styling

--- a/durandal02/css/themes/mocks.css
+++ b/durandal02/css/themes/mocks.css
@@ -997,21 +997,25 @@ input:-moz-placeholder {
 
 /*/\/\/\/\/\/\/\/\/\/\ SmoothDivScroll /\/\/\/\/\/\/\/\/\/\*/
 
+.fstrip .btn-nav,
+.pstrip .btn-nav,
 .hstrip .btn-nav {
     position: absolute;
     top: 30%;
 }
 
+.sd-fscroll .scrollableArea:first-child,
+.sd-pscroll .scrollableArea:first-child,
 .sd-scroll .scrollableArea:first-child {
     margin-left: 45px;
 }
 
-.hstrip .sd-scroll .mCSB_buttonLeft{
+.mCSB_buttonLeft{
     /*  The first url is for Firefox and other browsers, the second is for Internet Explorer */
     cursor: url(/lib/smoothDivScroll/images/cursors/cursor_arrow_left.png), url(/lib/smoothDivScroll/images/cursors/cursor_arrow_left.cur),w-resize;
 }
 
-.hstrip .sd-scroll .mCSB_buttonRight {
+.mCSB_buttonRight {
     /*  The first url is for Firefox and other browsers, the second is for Internet Explorer */
     cursor: url(/lib/smoothDivScroll/images/cursors/cursor_arrow_right.png), url(/lib/smoothDivScroll/images/cursors/cursor_arrow_right.cur),e-resize;
 }
